syntax = "proto3";
package nats;

import "github.com/aperturerobotics/bifrost/peer/peer.proto";
import "github.com/aperturerobotics/bifrost/hash/hash.proto";
import "github.com/aperturerobotics/timestamp/timestamp.proto";

// NatsConnType indicates the type of nats conn a stream represents.
enum NatsConnType {
  // NatsConnType_UNKNOWN is the unknown type.
  NatsConnType_UNKNOWN = 0;
  // NatsConnType_CLIENT is the client connection type.
  NatsConnType_CLIENT = 1;
  // NatsConnType_ROUTER is the router-router connection type.
  NatsConnType_ROUTER = 2;
  // TODO other types
}

// Config configures the nats router, hosting a nats.io routing node.
// This uses nats 2.0 accounts - an Account maps to a Peer.
message Config {
  // ClusterName is the cluster ID string to use.
  // This must be the same on all nodes.
  // If unset, uses the protocol ID.
  string cluster_name = 1;
  // PublishHashType is the hash type to use when signing published messages.
  // Defaults to sha256
  hash.HashType publish_hash_type = 2;

  // LogDebug turns on extended debugging logging.
  bool log_debug = 3;
  // LogTrace turns on tracing logging.
  // implies log_debug.
  bool log_trace = 4;
  // LogTraceVrebose turns on verbose tracing logging.
  // Implies log_trace and log_debug.
  bool log_trace_verbose = 5;
}
